# fastapi-backend-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c0f029aed71_init_tables.py
app/api/v1/: __init__.py  auth.py  health.py  task.py  users.py
app/cmd/: main.py
app/core/: celery_config.py  codes.py  constants.py  database.py  exceptions.py  logger.py  settings.py  telemetry.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  base.py  user.py
app/repositories/: base.py  user.py
app/schemas/: __init__.py  auth.py  base.py  task.py  user.py
app/services/: __init__.py  auth.py  base.py  user.py
app/tasks/: base.py  dummy.py
docs/: index.md
docs/architecture/: overview.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
